--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </li>
 
           <li>
-            <a href="#featured-car" class="navbar-link" data-nav-link>Explore cars</a>
+            <a href="explorecars.html" class="navbar-link" data-nav-link>Explore cars</a>
           </li>
 
           <li>
@@ -158,8 +158,8 @@
           <div class="title-wrapper">
             <h2 class="h2 section-title">Featured cars</h2>
 
-            <a href="#" class="featured-car-link">
-              <span>View more</span>
+            <a href="explorecars.html" class="featured-car-link">
+              <span >View more</span>
 
               <ion-icon name="arrow-forward-outline"></ion-icon>
             </a>
